// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table valueEnum ListToolBar action is empty array 1`] = `
<div
  class="ant-pro-table-list-toolbar"
>
  <div
    class="ant-pro-table-list-toolbar-container"
  >
    <div
      class="ant-pro-table-list-toolbar-left"
    />
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
    />
  </div>
</div>
`;

exports[`Table valueEnum ListToolBar action no array 1`] = `
<div
  class="ant-pro-table-list-toolbar"
>
  <div
    class="ant-pro-table-list-toolbar-container"
  >
    <div
      class="ant-pro-table-list-toolbar-left"
    />
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
    >
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            添 加
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table valueEnum ListToolBar action no jsx 1`] = `
<div
  class="ant-pro-table-list-toolbar"
>
  <div
    class="ant-pro-table-list-toolbar-container"
  >
    <div
      class="ant-pro-table-list-toolbar-left"
    />
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-pro-table-list-toolbar-right"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right:8px"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                添 加
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            shuaxin
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
